--- a/src/assets/css/user/userlogin.css
+++ b/src/assets/css/user/userlogin.css
@@ -10,7 +10,7 @@
     max-width: 400px;
     width: 90%;
     background-color: #1e2833;
-    padding: 40px;
+    padding: 40px 40px 0px 40px;
     border-radius: 4px;
     transform: translate(-50%, -50%);
     position: absolute;
@@ -22,7 +22,6 @@
 
 .login-dark .illustration {
     text-align: center;
-    padding: 15px 0 20px;
     font-size: 100px;
     color: #2980ef;
 }
@@ -39,9 +38,16 @@
 .login-dark form .forgot:hover, .login-dark form .forgot:active {
     opacity: 1;
     text-decoration: none;
+    cursor: pointer;
 }  
 
 .header-style {
     font-size: 24px;
     line-height: 30px;
+}
+
+.signup-text {
+    font-size: 20px;
+    text-align: left;
+    color: #e8f0f3;
 }
